--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://mapbox.bintray.com/mapbox' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
@@ -21,6 +22,16 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = 'mapbox'
+                password = 'sk.eyJ1IjoibW9oZmFobWkyNyIsImEiOiJja3F6YzlmNmMxZ3NoMm9xYTc3aDZ4c296In0.HGT6rtziQJbXotnLyglY4A'
+            }
+        }
     }
 }
 
